...
        app:layout_constraintStart_toStartOf="@+id/view2"
        app:layout_constraintTop_toTopOf="@+id/view2"
        app:srcCompat="@drawable/camera"
        tools:ignore="VectorDrawableCompat" />

    <EditText
        android:id="@+id/message_content"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
...
        android:elevation="10dp"
        android:ems="10"
        android:hint="Type your message here"
        android:inputType="textMultiLine"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/view2"
        app:layout_constraintEnd_toStartOf="@+id/send_button"
        app:layout_constraintStart_toEndOf="@+id/select_image"
        app:layout_constraintTop_toTopOf="@+id/view2" />

    <ImageButton
        android:id="@+id/send_button"
        android:layout_width="wrap_content"
...
